--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "bad_apple_youtube_page",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "Script to play Bad Apple in the YouTube Homepage (fork)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
-  "author": "",
-  "license": "ISC",
+  "author": "JoshnaksPNG",
+  "contributors": ["DmitrMarch"],
+  "license": "MIT",
   "dependencies": {
-    "ffmpeg": "^0.0.4",
-    "jimp": "^0.16.2",
-    "lodash": "^4.17.21"
+    "sharp": "^0.33.0"
   }
 }
